# tiny-js

./: CMakeLists.txt  README.md  wasm_js.cpp
include/: TinyJS.hpp  TinyJS_Functions.hpp  TinyJS_MathFunctions.hpp
samples/: ConstexprScript.cpp  Script.cpp
tests/: run_tests.cpp
